# v2t

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.cursor/agents/: anatoly-orchestrator.md  ui-designer.md
.cursor/rules/: v2t-project.mdc
.github/: RELEASE_NOTES_v2.0.10.md  RELEASE_NOTES_v2.0.11.md  RELEASE_NOTES_v2.0.12.md  RELEASE_NOTES_v2.0.13.md  RELEASE_NOTES_v2.0.9.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: API.md  PLAN.md  PLAN_NEXT.md  RELEASE.md  TASKS.md  WAVES.md
docs/plans/: 2026-07-18-001-refactor-ux-workbench-redesign-plan.md
e2e/: smoke.spec.ts
scripts/: check-i18n-keys.mjs  merge-i18n-drafts.mjs
scripts/translation-bot/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
scripts/translation-bot/src/: audit.ts  config.ts  index.ts  ollama.ts  output.ts  progress.ts  prompt.ts  review.ts  state.ts  translator.ts  validation.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tools.manifest.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_job_registry.rs  api_key_store.rs  api_server.rs  audio_save.rs  cancel_registry.rs  deps.rs  doc_extract.rs  gemini_key_store.rs  gpu_detect.rs  job.rs  lib.rs  main.rs  model_download.rs  output_template.rs  pipeline.rs  process_kill.rs  progress.rs  scan.rs  session_log.rs  settings.rs  subs.rs  temp_cleanup.rs  timed_transcript.rs  tool_download.rs  tool_manifest.rs  transcribe.rs  vision.rs  webhook.rs  whisper_bottle_macos.rs  whisper_catalog.rs  whisper_local.rs  yt_dlp_metadata.rs  yt_dlp_progress.rs
src/components/: DependencyBar.test.tsx  DependencyBar.tsx  JobProgressBar.tsx  OnboardingWizard.tsx  PreferencesSheet.tsx  QueuePanel.test.tsx  QueuePanel.tsx  ReadinessPanel.test.tsx  ReadinessPanel.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  SubtaskList.tsx  SubtaskRow.tsx  WorkbenchContext.tsx
src/i18n/: customDetector.ts  index.ts  resources.ts  types.ts
src/i18n/__tests__/: i18n.switch.test.tsx
src/lib/: browserWhisper.test.ts  browserWhisper.ts  invokeSafe.test.ts  invokeSafe.ts  onboardingSteps.test.ts  onboardingSteps.ts  outputTemplate.test.ts  outputTemplate.ts  platform.ts  profiles.test.ts  profiles.ts  queueUtils.test.ts  queueUtils.ts  speechLanguages.ts
src/locales/de/: common.json  onboarding.json  queue.json  readiness.json  settings.json
src/locales/en/: common.json  onboarding.json  queue.json  readiness.json  settings.json
src/locales/es/: common.json  onboarding.json  queue.json  readiness.json  settings.json
src/locales/fr/: common.json  onboarding.json  queue.json  readiness.json  settings.json
src/locales/pl/: common.json  onboarding.json  queue.json  readiness.json  settings.json
src/locales/pt/: common.json  onboarding.json  queue.json  readiness.json  settings.json
src/locales/ru/: common.json  onboarding.json  queue.json  readiness.json  settings.json
src/locales/uk/: common.json  onboarding.json  queue.json  (+2 more)
src/test/: setup.ts
src/types/: job.ts  pipeline.ts  preferences.ts  queue.ts  settings.ts  timedTranscript.ts
