[package]
name = "v2t"
version = "2.0.1"
description = "Portable video/audio to text (v2t)"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "v2t_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["time", "process", "macros", "rt-multi-thread", "io-util", "net", "sync"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
keyring = { version = "3", features = ["windows-native", "apple-native"] }
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate", "zstd"] }
flate2 = "1"
tar = "0.4"
urlencoding = "2"
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
rand = "0.8"
async-stream = "0.3"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
rusqlite = { version = "0.32", features = ["bundled"] }
lopdf = "0.34"
base64 = { version = "0.22", features = ["std"] }

